# portfolia.rs

./: Cargo.toml  Dockerfile  diesel.toml  package.json  pnpm-lock.yaml  tailwind.config.js
migrations/2024-07-22-014354_create_articles/: up.sql
migrations/2024-07-22-024342_add_updatedAt_to_articles/: down.sql  up.sql
migrations/2024-07-22-025438_add_null_to_articles/: down.sql  up.sql
migrations/2024-07-31-030403_add_slug_to_articles/: down.sql  up.sql
migrations/2024-08-02-023730_article_add_json_contents/: up.sql
migrations/2024-08-02-024420_article_add_json_contents_arrays/: up.sql
src/: main.rs
src/blocks/: contents.rs  mod.rs  renderer.rs
src/database/: client.rs  mod.rs  models.rs  schema.rs
src/diesel/: models.rs  schema.rs
src/markdown/: renderer.rs
src/markdown_content/: renderer.rs
src/route/: api.rs  articles.rs  home.rs  mod.rs  static_file.rs
src/sanity/: client.rs  mod.rs  types.rs
static/: tailwind.css
templates/: about.html  article-detail.html  articles.html  index.html  snippets.html  videos.html
templates/articles/: intro-to-react.html
templates/partials/: article-series.html  categories.html  header.html  home-intro.html  latest-articles.html  layout.html  nav-aside.html  newsletter.html  projects.html  tailwind.css
