[package]
name = "portfolia-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
handlebars = { version = "5.1.2", features = ["dir_source"] }
serde_json = "1.0.120"
env_logger = "0.11.3"
actix-files = "0.6.6"
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
